--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #d4145a;
-  --ion-color-primary-rgb: 212, 20, 90;
+  --ion-color-primary: #fcdc00;
+  --ion-color-primary-rgb: 252, 220, 0;
   --ion-color-primary-contrast: #f8dcdc;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #bb124f;
-  --ion-color-primary-tint: #d82c6b;
+  --ion-color-primary-tint: #fcdc00;
 
   /** secondary **/
   --ion-color-secondary: #FFC93C;
