--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #fcdc00;
+  --ion-color-primary: #000000;
   --ion-color-primary-rgb: 252, 220, 0;
   --ion-color-primary-contrast: #f8dcdc;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
