--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,7 +9,7 @@
   --ion-color-primary-contrast: #f8dcdc;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #bb124f;
-  --ion-color-primary-tint: #fcdc00;
+  --ion-color-primary-tint: #F8DC02;
 
   /** secondary **/
   --ion-color-secondary: #FFC93C;
