--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,11 +5,11 @@
 :root {
   /** primary **/
   --ion-color-primary: #000000;
-  --ion-color-primary-rgb: 252, 220, 0;
+  --ion-color-primary-rgb: 255, 204, 0;
   --ion-color-primary-contrast: #f8dcdc;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #bb124f;
-  --ion-color-primary-tint: #F8DC02;
+  --ion-color-primary-tint: #FFCC00;
 
   /** secondary **/
   --ion-color-secondary: #FFC93C;
