--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -19,7 +19,7 @@ ion-tab-bar[slot="bottom"] {
     --padding-bottom: 8px;
     --padding-top: 8px;
     background: transparent;
-    margin: 0px 10px;
+    margin: 0 auto;
 
     ion-icon.md,
     ion-label.md {
@@ -30,7 +30,7 @@ ion-tab-bar[slot="bottom"] {
       background-color: transparent;
       display: block;
       content: " ";
-      margin: 0px 10px;
+      margin: 0px 0px;
       width: 20px;
       height: 2px;
     }
