--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,13 +10,18 @@
       <ion-icon name="search-outline"></ion-icon>
       <ion-label>{{ 'EXPLORE' | translate }}</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="posts" layout="icon-top" (click)="handleTabClick($event)">
-      <ion-icon name="notifications-outline"></ion-icon>
-      <ion-label>{{ 'POSTS' | translate }}</ion-label>
+    
+    <ion-tab-button tab="map" layout="icon-top" (click)="handleTabClick($event)">
+      <ion-icon name="map-outline"></ion-icon>
+      <ion-label>{{ 'MAP' | translate }}</ion-label>
     </ion-tab-button>
     
-        <ion-tab-button tab="profile" layout="icon-top" (click)="handleTabClick($event)">
+    <ion-tab-button tab="likes" layout="icon-top" (click)="handleTabClick($event)">
+      <ion-icon name="heart-outline"></ion-icon>
+      <ion-label>{{ 'LIKES' | translate }}</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="profile" layout="icon-top" (click)="handleTabClick($event)">
       <ion-icon name="person-outline"></ion-icon>
       <ion-label>{{ 'PROFILE' | translate }}</ion-label>
     </ion-tab-button>
@@ -32,10 +37,15 @@
       <ion-icon name="search-outline"></ion-icon>
       <ion-label>{{ 'EXPLORE' | translate }}</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="posts" layout="icon-start" (click)="handleTabClick($event)">
-      <ion-icon name="notifications-outline"></ion-icon>
-      <ion-label>{{ 'POSTS' | translate }}</ion-label>
+    
+    <ion-tab-button tab="map" layout="icon-start" (click)="handleTabClick($event)">
+      <ion-icon name="map-outline"></ion-icon>
+      <ion-label>{{ 'MAP' | translate }}</ion-label>
+    </ion-tab-button>
+    
+    <ion-tab-button tab="likes" layout="icon-start" (click)="handleTabClick($event)">
+      <ion-icon name="heart-outline"></ion-icon>
+      <ion-label>{{ 'LIKES' | translate }}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile" layout="icon-start" (click)="handleTabClick($event)">
