--- a/src/app/pages/map/map.html
+++ b/src/app/pages/map/map.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary" fixed>
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="preference.currentTab"></ion-back-button>
+      <ion-back-button [defaultHref]="/1"></ion-back-button>
     </ion-buttons>
     <ion-searchbar class="text-small" mode="ios" [placeholder]="'ENTER_ADDRESS' | translate"
       (ionInput)="onSearchAddress($event)" (ionCancel)="onClearSearchAddress()" (ionClear)="onClearSearchAddress()">
