--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -15,7 +15,7 @@ ion-tab-bar[slot="bottom"] {
 
   ion-tab-button {
     --color: var(--ion-color-medium);
-    --color-selected: var(--ion-color-tertiary-contrast);
+    --color-selected: var(--ion-color-primary);
     --padding-bottom: 8px;
     --padding-top: 8px;
     background: transparent;
@@ -27,7 +27,7 @@ ion-tab-bar[slot="bottom"] {
     }
 
     &::before {
-      background-color: var(--ion-color-primary);
+      background-color: transparent;
       display: block;
       content: " ";
       margin: 0px 0px;
