--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,7 +9,7 @@
   --ion-color-primary-contrast: #FFCC00;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #bb124f;
-  --ion-color-primary-tint: #FFCC00;
+  --ion-color-primary-tint: #f8dcdc;
 
   /** secondary **/
   --ion-color-secondary: #FFC93C;
