--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,7 +6,7 @@
   /** primary **/
   --ion-color-primary: #000000;
   --ion-color-primary-rgb: 255, 204, 0;
-  --ion-color-primary-contrast: #f8dcdc;
+  --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #bb124f;
   --ion-color-primary-tint: #FFCC00;
