--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -27,7 +27,7 @@ ion-tab-bar[slot="bottom"] {
     }
 
     &::before {
-      background-color: transparent;
+      background-color: var(--ion-color-primary-shade);
       display: block;
       content: " ";
       margin: 0px 0px;
